tests/output/self_hosted/double_plus_back_error.txt
tests/double_plus_back_error.oomph:2: error: should be an expression

    print(thing++)
                ^

